Finalisation du projet Carr'auto : correction des chemins d'images, ajout des vues manquantes (Edit/Delete pour les produits, Details/Edit/Delete pour les services), et mise à jour des migrations

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
                 <a asp-controller="Home" asp-action="Histoire" class="btn btn-outline-primary">Découvrir notre histoire</a>
             </div>
             <div class="col-md-6">
-                <img src="/images/atelier.jpg" alt="Atelier du garage Carr'auto" class="img-fluid rounded shadow">
+                <img src="/images/home/Garage.jpeg" alt="Atelier du garage Carr'auto" class="img-fluid rounded shadow">
             </div>
         </div>
     </div>
