--- a/Views/Produits/Index.cshtml
+++ b/Views/Produits/Index.cshtml
@@ -82,7 +82,7 @@
                                         }
                                         else
                                         {
-                                            <img src="/images/product-default.jpg" class="card-img-top" alt="@produit.Nom">
+                                            <img src="/images/products/default-product" class="card-img-top" alt="@produit.Nom">
                                         }
                                         
                                         @if (produit.EnPromotion)
