--- a/Views/VehiculeOccasion/Index.cshtml
+++ b/Views/VehiculeOccasion/Index.cshtml
@@ -96,7 +96,7 @@
                                 }
                                 else
                                 {
-                                    <img src="/images/car-default.jpg" class="card-img-top" alt="@vehicule.Marque @vehicule.Modele">
+                                    <img src="/images/vehicles/car-default.jpg" class="card-img-top" alt="@vehicule.Marque @vehicule.Modele">
                                 }
                                 <div class="vehicle-price-tag">@vehicule.Prix.ToString("C0")</div>
                             </div>
